@@ -3,7 +3,7 @@
 // Project ProjectForge Community Edition
 //         www.projectforge.org
 //
-// Copyright (C) 2001-2014 Kai Reinhard (k.reinhard@micromata.de)
+// Copyright (C) 2001-2022 Micromata GmbH, Germany (www.micromata.com)
 //
 // ProjectForge is dual-licensed.
 //
@@ -23,24 +23,23 @@
 
 package org.projectforge.framework.persistence.database;
 
-import static org.testng.AssertJUnit.*;
-
+import org.junit.jupiter.api.Test;
 import org.projectforge.business.task.TaskDO;
 import org.projectforge.framework.persistence.api.HibernateUtils;
 import org.projectforge.test.AbstractTestBase;
-import org.testng.annotations.Test;
 
-public class HibernateUtilsTest extends AbstractTestBase
-{
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+
+public class HibernateUtilsTest extends AbstractTestBase {
   @Test
-  public void propertyLengthTest()
-  {
+  public void propertyLengthTest() {
     Integer length = HibernateUtils.getPropertyLength(TaskDO.class.getName(), "title");
-    assertEquals(new Integer(40), length);
+    assertEquals(Integer.valueOf(40), length);
     length = HibernateUtils.getPropertyLength(TaskDO.class.getName(), "shortDescription");
-    assertEquals(new Integer(255), length);
+    assertEquals(Integer.valueOf(255), length);
     length = HibernateUtils.getPropertyLength(TaskDO.class, "shortDescription");
-    assertEquals(new Integer(255), length);
+    assertEquals(Integer.valueOf(255), length);
     HibernateUtils.enterTestMode();
     length = HibernateUtils.getPropertyLength(TaskDO.class.getName(), "unknown");
     HibernateUtils.exitTestMode();
