@@ -3,7 +3,7 @@
 // Project ProjectForge Community Edition
 //         www.projectforge.org
 //
-// Copyright (C) 2001-2014 Kai Reinhard (k.reinhard@micromata.de)
+// Copyright (C) 2001-2022 Micromata GmbH, Germany (www.micromata.com)
 //
 // ProjectForge is dual-licensed.
 //
@@ -23,33 +23,30 @@
 
 package org.projectforge.common;
 
-import java.lang.annotation.Annotation;
-import java.lang.reflect.Array;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.lang.reflect.Modifier;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Iterator;
-import java.util.LinkedList;
-import java.util.List;
+import org.apache.commons.lang3.ArrayUtils;
+import org.apache.commons.lang3.StringUtils;
 
-import org.apache.commons.lang.ArrayUtils;
-import org.apache.commons.lang.ObjectUtils;
-import org.apache.commons.lang.StringUtils;
+import java.lang.annotation.Annotation;
+import java.lang.reflect.*;
+import java.util.*;
 
 /**
  * Some useful methods for determing and converting property, getter and setter names.
- * 
+ *
  * @author Kai Reinhard (k.reinhard@micromata.de)
- * 
  */
-public class BeanHelper
-{
-  private static final org.apache.log4j.Logger log = org.apache.log4j.Logger.getLogger(BeanHelper.class);
+public class BeanHelper {
+  private static final org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(BeanHelper.class);
+
+  private static final Map<Class<?>, Field[]> declaredFieldsCache = new HashMap<>();
+
+  private static final Map<Class<?>, Method[]> declaredMethodsCache = new HashMap<>();
+
+  private static final Map<String, Annotation[]> declaredFieldAnnotationsCache = new HashMap<>();
+
+  private static final Map<String, Method> getterMethodsCache = new HashMap<>();
+
+  private static final Map<String, Method[]> declaredGetterMethodsCache = new HashMap<>();
 
   private static boolean TEST_MODE = false;
 
@@ -57,8 +54,7 @@ public class BeanHelper
    * For internal test cases only! If true, log errors are suppressed. Please call {@link #exitTestMode()} always
    * directly after your test call!
    */
-  public static void enterTestMode()
-  {
+  public static void enterTestMode() {
     TEST_MODE = true;
     log.info("***** Entering TESTMODE.");
   }
@@ -67,14 +63,12 @@ public class BeanHelper
    * For internal test cases only! If true, log errors are suppressed. Please set TEST_MODE always to false after your
    * test call!
    */
-  public static void exitTestMode()
-  {
+  public static void exitTestMode() {
     TEST_MODE = false;
     log.info("***** Exit TESTMODE.");
   }
 
-  public static String determinePropertyName(final Method method)
-  {
+  public static String determinePropertyName(final Method method) {
     final String name = method.getName();
     if (name.startsWith("get") == true || name.startsWith("set") == true || name.startsWith("has") == true) {
       return StringUtils.uncapitalize(name.substring(3));
@@ -84,22 +78,27 @@ public class BeanHelper
     return method.getName();
   }
 
-  public static Method determineGetter(final Class<?> clazz, final String fieldname)
-  {
+  public static Method determineGetter(final Class<?> clazz, final String fieldname) {
     return determineGetter(clazz, fieldname, true);
   }
 
   /**
    * Returns the declared annotations of a field.
-   * 
+   *
    * @param clazz
    * @param fieldname
    * @return
    */
-  public static Annotation[] getDeclaredAnnotations(final Class<?> clazz, final String fieldname)
-  {
+  public static Annotation[] getDeclaredAnnotations(final Class<?> clazz, final String fieldname) {
     Class<?> classToCheck = clazz;
     String fieldnameToCheck = fieldname;
+
+    final String key = clazz.getName() + ":" + fieldname;
+    synchronized (declaredFieldAnnotationsCache) { // Caches all annotations for improving performance especially on sorting Wicket lists.
+      if (declaredFieldAnnotationsCache.containsKey(key)) {
+        return declaredFieldAnnotationsCache.get(key); // Might be null
+      }
+    }
     if (fieldname.contains(".")) {
       String[] fieldSplit = fieldname.split("\\.");
       fieldnameToCheck = fieldSplit[fieldSplit.length - 1];
@@ -110,7 +109,11 @@ public class BeanHelper
       }
     }
     Field field = getDeclaredField(classToCheck, fieldnameToCheck);
-    return field == null ? null : field.getDeclaredAnnotations();
+    Annotation[] annotations = field != null ? field.getDeclaredAnnotations() : null;
+    synchronized (declaredFieldAnnotationsCache) {
+      declaredFieldAnnotationsCache.put(key, annotations);
+    }
+    return annotations;
   }
 
   /**
@@ -119,10 +122,16 @@ public class BeanHelper
    * @param onlyPublicGetter true is default.
    * @return
    */
-  public static Method determineGetter(final Class<?> clazz, final String fieldname, final boolean onlyPublicGetter)
-  {
+  public static Method determineGetter(final Class<?> clazz, final String fieldname, final boolean onlyPublicGetter) {
+    String key = clazz.getName() + ":" + fieldname;
+    synchronized (getterMethodsCache) { // Caches all annotations for improving performance especially on sorting Wicket lists.
+      if (getterMethodsCache.containsKey(key)) {
+        return getterMethodsCache.get(key); // Might be null
+      }
+    }
     final String cap = StringUtils.capitalize(fieldname);
     final Method[] methods = getAllDeclaredMethods(clazz);
+    Method getterMethod = null;
     for (final Method method : methods) {
       if (onlyPublicGetter == true && Modifier.isPublic(method.getModifiers()) == false) {
         continue;
@@ -138,79 +147,23 @@ public class BeanHelper
       if (matches == true) {
         if (method.isBridge() == false) {
           // Don't return bridged methods (methods defined in interface or super class with different return type).
-          return method;
+          getterMethod = method;
+          break;
         }
       }
     }
-    return null;
-  }
-
-  /**
-   * Return all methods starting with 'get*' or 'is*' without parameters and non-bridged of given class and all
-   * interfaces and super classes.
-   * 
-   * @param clazz
-   * @return
-   */
-  public static List<Method> getAllGetterMethods(final Class<?> clazz)
-  {
-    return getAllGetterMethods(clazz, true);
-  }
-
-  /**
-   * Return all methods starting with 'get*' or 'is*' without parameters and non-bridged of given class and all
-   * interfaces and super classes.
-   * 
-   * @param clazz
-   * @param includingSuperClasses default is true.
-   * @return
-   */
-  public static List<Method> getAllGetterMethods(final Class<?> clazz, final boolean includingSuperClasses)
-  {
-    final Method[] methods;
-    if (includingSuperClasses == true) {
-      methods = getAllDeclaredMethods(clazz);
-    } else {
-      methods = clazz.getDeclaredMethods();
+    synchronized (getterMethodsCache) { // Caches all annotations for improving performance especially on sorting Wicket lists.
+      getterMethodsCache.put(key, getterMethod);
     }
-    final List<Method> list = new LinkedList<Method>();
-    for (final Method method : methods) {
-      final String name = method.getName();
-      if (name.startsWith("get") == true && name.length() > 3 || //
-          name.startsWith("has") == true
-          || name.startsWith("is") == true
-              && name.length() > 2) {
-        if (method.getParameterTypes().length == 0 && method.isBridge() == false) {
-          // Don't return bridged methods (methods defined in interface or super class with different return type).
-          list.add(method);
-        }
-      }
-    }
-    return list;
+    return getterMethod;
   }
 
-  /**
-   * getProperty -> property, isValid -> valid.
-   * 
-   * @param method
-   */
-  public static String getProperty(final Method method)
-  {
-    final String name = method.getName();
-    int pos = 0;
-    if ((name.startsWith("get") == true || name.startsWith("has") == true) && name.length() > 3) {
-      pos = 3;
-    } else if (name.startsWith("is") == true && name.length() > 2) {
-      pos = 2;
-    } else {
-      return null;
-    }
-    final String property = name.substring(pos);
-    return StringUtils.uncapitalize(property);
+
+  public static Class<?> determinePropertyType(final Class<?> clazz, final String fieldname) {
+    return determinePropertyType(determineGetter(clazz, fieldname));
   }
 
-  public static Class<?> determinePropertyType(final Method method)
-  {
+  public static Class<?> determinePropertyType(final Method method) {
     if (method == null) {
       return null;
     }
@@ -224,13 +177,12 @@ public class BeanHelper
   /**
    * Does not work for multiple setter methods with one argument and different parameter type (e. g. setField(Date) and
    * setField(long)).
-   * 
+   *
    * @param clazz
    * @param fieldname
    * @return
    */
-  public static Method determineSetter(final Class<?> clazz, final String fieldname)
-  {
+  public static Method determineSetter(final Class<?> clazz, final String fieldname) {
     final String cap = StringUtils.capitalize(fieldname);
     final Method[] methods = clazz.getMethods();
     for (final Method method : methods) {
@@ -241,8 +193,7 @@ public class BeanHelper
     return null;
   }
 
-  public static Method determineSetter(final Class<?> clazz, final Method method)
-  {
+  public static Method determineSetter(final Class<?> clazz, final Method method) {
     final String name = method.getName();
     if (name.startsWith("set") == true) {
       return method;
@@ -251,17 +202,17 @@ public class BeanHelper
         if (name.startsWith("get") == true || name.startsWith("has") == true) {
           final Class<?> parameterType = method.getReturnType();
           final String setterName = "set" + name.substring(3);
-          return clazz.getMethod(setterName, new Class[] { parameterType });
+          return clazz.getMethod(setterName, new Class[]{parameterType});
         } else if (name.startsWith("is") == true) {
           final Class<?> parameterType = method.getReturnType();
           final String setterName = "set" + name.substring(2);
-          return clazz.getMethod(setterName, new Class[] { parameterType });
+          return clazz.getMethod(setterName, new Class[]{parameterType});
         }
       } catch (final SecurityException ex) {
-        log.fatal("Could not determine setter for '" + name + "': " + ex, ex);
+        log.error("Could not determine setter for '" + name + "': " + ex, ex);
         throw new RuntimeException(ex);
       } catch (final NoSuchMethodException ex) {
-        log.fatal("Could not determine setter for '" + name + "': " + ex, ex);
+        log.error("Could not determine setter for '" + name + "': " + ex, ex);
         throw new RuntimeException(ex);
       }
     }
@@ -269,45 +220,33 @@ public class BeanHelper
     return null;
   }
 
-  public static void invokeSetter(final Object obj, final Method method, final Object value)
-  {
+  public static void invokeSetter(final Object obj, final Method method, final Object value) {
     final Method setter = determineSetter(obj.getClass(), method);
     invoke(obj, setter, value);
   }
 
   /**
    * Invokes the method of the given object (without arguments).
-   * 
+   *
    * @param obj
    * @param method
    * @return
    */
-  public static Object invoke(final Object obj, final Method method)
-  {
+  public static Object invoke(final Object obj, final Method method) {
     return invoke(obj, method, null);
   }
 
-  public static Object invoke(final Object obj, final Method method, final Object[] args)
-  {
+  public static Object invoke(final Object obj, final Method method, final Object[] args) {
     try {
       return method.invoke(obj, args);
-    } catch (final IllegalArgumentException ex) {
-      log.fatal("Could not invoke '" + method.getName() + "': " + ex + " for object [" + obj + "] with args: " + args,
-          ex);
-      throw new RuntimeException(ex);
-    } catch (final IllegalAccessException ex) {
-      log.fatal("Could not invoke '" + method.getName() + "': " + ex + " for object [" + obj + "] with args: " + args,
-          ex);
-      throw new RuntimeException(ex);
-    } catch (final InvocationTargetException ex) {
-      log.fatal("Could not invoke '" + method.getName() + "': " + ex + " for object [" + obj + "] with args: " + args,
+    } catch (final IllegalArgumentException | IllegalAccessException | InvocationTargetException ex) {
+      log.error("Could not invoke '" + method.getName() + "': " + ex.getMessage() + " for object [" + obj + "] with args: " + args,
           ex);
       throw new RuntimeException(ex);
     }
   }
 
-  public static Object newInstance(final String className)
-  {
+  public static Object newInstance(final String className) {
     Class<?> clazz = null;
     try {
       clazz = Class.forName(className);
@@ -320,13 +259,11 @@ public class BeanHelper
     return null;
   }
 
-  private static void logInstantiationException(final Exception ex, final Class<?> clazz)
-  {
+  private static void logInstantiationException(final Exception ex, final Class<?> clazz) {
     logInstantiationException(ex, clazz.getName());
   }
 
-  private static void logInstantiationException(final Exception ex, final String className)
-  {
+  private static void logInstantiationException(final Exception ex, final String className) {
     if (TEST_MODE == false) {
       log.error("Can't create instance of '" + className + "': " + ex.getMessage(), ex);
     } else {
@@ -334,22 +271,18 @@ public class BeanHelper
     }
   }
 
-  public static Object newInstance(final Class<?> clazz)
-  {
+  public static Object newInstance(final Class<?> clazz) {
     Constructor<?> constructor = null;
     try {
       constructor = clazz.getDeclaredConstructor(new Class[0]);
-    } catch (final SecurityException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final NoSuchMethodException ex) {
+    } catch (final SecurityException | NoSuchMethodException ex) {
       logInstantiationException(ex, clazz);
     }
     if (constructor == null) {
       try {
-        return clazz.newInstance();
-      } catch (final InstantiationException ex) {
-        logInstantiationException(ex, clazz);
-      } catch (final IllegalAccessException ex) {
+        return clazz.getDeclaredConstructor().newInstance();
+      } catch (final InstantiationException | IllegalAccessException | InvocationTargetException |
+                     NoSuchMethodException ex) {
         logInstantiationException(ex, clazz);
       }
       return null;
@@ -357,86 +290,79 @@ public class BeanHelper
     constructor.setAccessible(true);
     try {
       return constructor.newInstance();
-    } catch (final IllegalArgumentException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final InstantiationException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final IllegalAccessException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final InvocationTargetException ex) {
+    } catch (final IllegalArgumentException | InstantiationException | InvocationTargetException |
+                   IllegalAccessException ex) {
       logInstantiationException(ex, clazz);
     }
     return null;
   }
 
-  public static Object newInstance(final Class<?> clazz, final Class<?> paramType, final Object param)
-  {
-    return newInstance(clazz, new Class<?>[] { paramType }, param);
+  public static Object newInstance(final Class<?> clazz, final Class<?> paramType, final Object param) {
+    return newInstance(clazz, new Class<?>[]{paramType}, param);
   }
 
   public static Object newInstance(final Class<?> clazz, final Class<?> paramType1, final Class<?> paramType2,
-      final Object param1,
-      final Object param2)
-  {
-    return newInstance(clazz, new Class<?>[] { paramType1, paramType2 }, param1, param2);
+                                   final Object param1,
+                                   final Object param2) {
+    return newInstance(clazz, new Class<?>[]{paramType1, paramType2}, param1, param2);
   }
 
-  public static Object newInstance(final Class<?> clazz, final Class<?>[] paramTypes, final Object... params)
-  {
+  public static Object newInstance(final Class<?> clazz, final Class<?>[] paramTypes, final Object... params) {
     Constructor<?> constructor = null;
     try {
       constructor = clazz.getDeclaredConstructor(paramTypes);
-    } catch (final SecurityException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final NoSuchMethodException ex) {
+    } catch (final SecurityException | NoSuchMethodException ex) {
       logInstantiationException(ex, clazz);
     }
     constructor.setAccessible(true);
     try {
       return constructor.newInstance(params);
-    } catch (final IllegalArgumentException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final InstantiationException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final IllegalAccessException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final InvocationTargetException ex) {
+    } catch (final IllegalArgumentException | InstantiationException | InvocationTargetException |
+                   IllegalAccessException ex) {
       logInstantiationException(ex, clazz);
     }
     return null;
   }
 
-  public static Object invoke(final Object obj, final Method method, final Object arg)
-  {
-    return invoke(obj, method, new Object[] { arg });
+  public static Object invoke(final Object obj, final Method method, final Object arg) {
+    return invoke(obj, method, new Object[]{arg});
   }
 
   /**
    * Return all fields declared by the given class and all super classes.
-   * 
+   *
    * @param clazz
    * @return
    * @see Class#getDeclaredFields()
    */
-  public static Field[] getAllDeclaredFields(Class<?> clazz)
-  {
-    Field[] fields = clazz.getDeclaredFields();
-    while (clazz.getSuperclass() != null) {
-      clazz = clazz.getSuperclass();
-      fields = (Field[]) ArrayUtils.addAll(fields, clazz.getDeclaredFields());
+  public static Field[] getAllDeclaredFields(final Class<?> clazz) {
+    Field[] fields;
+    synchronized (declaredFieldsCache) { // Caches all fields for improving performance especially on sorting Wicket lists.
+      fields = declaredFieldsCache.get(clazz);
+      if (fields != null) {
+        return fields;
+      }
+    }
+    fields = clazz.getDeclaredFields();
+    Class<?> superClass = clazz.getSuperclass();
+    while (superClass != null) {
+      fields = ArrayUtils.addAll(fields, superClass.getDeclaredFields());
+      superClass = superClass.getSuperclass();
+    }
+    synchronized (declaredFieldsCache) {
+      declaredFieldsCache.put(clazz, fields);
     }
     return fields;
   }
 
   /**
-   * Return the matching field declared by the given class.
-   * 
+   * Return the matching field declared by the given class or any super class.
+   *
    * @param clazz
    * @param fieldname
    * @return the field or null
    */
-  public static Field getDeclaredField(Class<?> clazz, String fieldname)
-  {
+  public static Field getDeclaredField(Class<?> clazz, String fieldname) {
     Field[] fields = getAllDeclaredFields(clazz);
     for (Field f : fields) {
       if (f.getName().equals(fieldname)) {
@@ -448,24 +374,34 @@ public class BeanHelper
 
   /**
    * Return all methods declared by the given class and all super classes.
-   * 
+   *
    * @param clazz
    * @return
    * @see Class#getDeclaredMethods()
    */
-  public static Method[] getAllDeclaredMethods(Class<?> clazz)
-  {
-    Method[] methods = clazz.getDeclaredMethods();
-    while (clazz.getSuperclass() != null) {
-      clazz = clazz.getSuperclass();
-      methods = (Method[]) ArrayUtils.addAll(methods, clazz.getDeclaredMethods());
+  public static Method[] getAllDeclaredMethods(final Class<?> clazz) {
+    Method[] methods;
+    synchronized (declaredMethodsCache) { // Caches all fields for improving performance especially on sorting Wicket lists.
+      methods = declaredMethodsCache.get(clazz);
+      if (methods != null) {
+        return methods;
+      }
+    }
+    methods = clazz.getDeclaredMethods();
+    Class<?> superClass = clazz.getSuperclass();
+    while (superClass != null) {
+      methods = ArrayUtils.addAll(methods, superClass.getDeclaredMethods());
+      superClass = superClass.getSuperclass();
+    }
+    synchronized (declaredMethodsCache) {
+      declaredMethodsCache.put(clazz, methods);
     }
     return methods;
   }
 
   /**
    * Invokes getter method of the given bean.
-   * 
+   *
    * @param bean
    * @param property
    * @return
@@ -473,11 +409,10 @@ public class BeanHelper
    * @throws IllegalAccessException
    * @throws IllegalArgumentException
    */
-  public static Object getProperty(final Object bean, final String property)
-  {
+  public static Object getProperty(final Object bean, final String property) {
     final Method getter = determineGetter(bean.getClass(), property);
     if (getter == null) {
-      throw new RuntimeException("Getter for property '" + property + "' not found.");
+      throw new RuntimeException("Getter for property '" + bean.getClass() + "." + property + "' not found.");
     }
     try {
       return getter.invoke(bean);
@@ -492,17 +427,16 @@ public class BeanHelper
 
   /**
    * Invokes setter method of the given bean.
-   * 
+   *
    * @param bean
    * @param property
    * @param value
-   * @see Method#invoke(Object, Object...)
    * @throws InvocationTargetException
    * @throws IllegalAccessException
    * @throws IllegalArgumentException
+   * @see Method#invoke(Object, Object...)
    */
-  public static Object setProperty(final Object bean, final String property, final Object value)
-  {
+  public static Object setProperty(final Object bean, final String property, final Object value) {
     final Method setter = determineSetter(bean.getClass(), property);
     if (setter == null) {
       throw new RuntimeException("Getter for property '" + property + "' not found.");
@@ -520,7 +454,7 @@ public class BeanHelper
 
   /**
    * Invokes getter method of the given bean and returns the idx element of array or collection. Use-age: "user[3]".
-   * 
+   *
    * @param bean
    * @param property Must be from format "xxx[#]"
    * @return
@@ -528,8 +462,7 @@ public class BeanHelper
    * @throws IllegalAccessException
    * @throws IllegalArgumentException
    */
-  public static Object getIndexedProperty(final Object bean, final String property)
-  {
+  public static Object getIndexedProperty(final Object bean, final String property) {
     final int pos = property.indexOf('[');
     if (pos <= 0) {
       throw new UnsupportedOperationException("'" + property + "' is not an indexed property, such as 'xxx[#]'.");
@@ -560,7 +493,7 @@ public class BeanHelper
   /**
    * Later Genome SimpleProperty should be used. Property or nested property can be null. Indexed properties are also
    * supported.
-   * 
+   *
    * @param bean
    * @param property
    * @return
@@ -568,8 +501,7 @@ public class BeanHelper
    * @throws IllegalAccessException
    * @throws IllegalArgumentException
    */
-  public static Object getNestedProperty(final Object bean, final String property)
-  {
+  public static Object getNestedProperty(final Object bean, final String property) {
     if (StringUtils.isEmpty(property) == true || bean == null) {
       return null;
     }
@@ -590,12 +522,11 @@ public class BeanHelper
 
   /**
    * Gets all declared fields which are neither transient, static nor final.
-   * 
+   *
    * @param clazz
    * @return
    */
-  public static Field[] getDeclaredPropertyFields(final Class<?> clazz)
-  {
+  public static Field[] getDeclaredPropertyFields(final Class<?> clazz) {
     final Field[] fields = getAllDeclaredFields(clazz);
     final List<Field> list = new ArrayList<Field>();
     for (final Field field : fields) {
@@ -612,12 +543,11 @@ public class BeanHelper
 
   /**
    * @param obj
-   * @param clazz Class of object or superclass at which the fieldname is declared
+   * @param clazz     Class of object or superclass at which the fieldname is declared
    * @param fieldname
    * @return
    */
-  public static Object getFieldValue(final Object obj, final Class<?> clazz, final String fieldname)
-  {
+  public static Object getFieldValue(final Object obj, final Class<?> clazz, final String fieldname) {
     if (obj == null) {
       return null;
     }
@@ -635,8 +565,7 @@ public class BeanHelper
     return null;
   }
 
-  public static Object getFieldValue(final Object obj, final Field field)
-  {
+  public static Object getFieldValue(final Object obj, final Field field) {
     try {
       return field.get(obj);
     } catch (final IllegalArgumentException ex) {
@@ -659,20 +588,19 @@ public class BeanHelper
 
   /**
    * Copies all properties from src object to dest object.
-   * 
+   *
    * @param src
    * @param dest
    * @param properties
    * @return true if any property is different between src and dest object.
    */
-  public static boolean copyProperties(final Object src, final Object dest, final String... properties)
-  {
+  public static boolean copyProperties(final Object src, final Object dest, final String... properties) {
     return copyProperties(src, dest, false, properties);
   }
 
   /**
    * Copies all properties from src object to dest object.
-   * 
+   *
    * @param src
    * @param dest
    * @param whitespaceEqualsNull If true than a String modification from null to "" and vice versa will be ignored.
@@ -681,8 +609,7 @@ public class BeanHelper
    */
   @SuppressWarnings("unchecked")
   public static boolean copyProperties(final Object src, final Object dest, final boolean whitespaceEqualsNull,
-      final String... properties)
-  {
+                                       final String... properties) {
     boolean modified = false;
     for (final String property : properties) {
       final Object srcValue = BeanHelper.getProperty(src, property);
@@ -702,7 +629,7 @@ public class BeanHelper
           BeanHelper.setProperty(dest, property, srcValue);
         }
       } else {
-        if (ObjectUtils.equals(srcValue, destValue) == false) {
+        if (Objects.equals(srcValue, destValue) == false) {
           if (whitespaceEqualsNull == true && (srcValue instanceof String || destValue instanceof String)) {
             if (StringUtils.isEmpty((String) srcValue) == false || StringUtils.isEmpty((String) destValue) == false) {
               // Do not copy this property if srcValue and destValue are empty ("" or null):
@@ -719,8 +646,7 @@ public class BeanHelper
     return modified;
   }
 
-  static boolean isEqualList(final Collection<?> c1, final Collection<?> c2)
-  {
+  static boolean isEqualList(final Collection<?> c1, final Collection<?> c2) {
     if (c1 == c2) {
       return true;
     } else if (c1 == null) {
@@ -749,8 +675,7 @@ public class BeanHelper
     return true;
   }
 
-  static Object get(final Collection<?> col, final int index)
-  {
+  static Object get(final Collection<?> col, final int index) {
     final Iterator<?> it = col.iterator();
     for (int i = 0; i < index; i++) {
       it.next();
